start_writing_manage

--- a/rivermonad.cabal
+++ b/rivermonad.cabal
@@ -52,18 +52,25 @@ executable rivermonad
     Wayland.Client
     Wayland.Protocol.Core
     Wayland.Protocol.RiverWM
+    Types
 
   -- LANGUAGE extensions used by modules in this package.
   -- other-extensions:
   -- Other library packages from which modules are imported.
-  build-depends: base ^>=4.20.2.0
+  build-depends:
+    base ^>=4.20.2.0,
+    text,
+
   -- Directories containing source files.
   hs-source-dirs:
     src
 
   c-sources:
-    c_src/river-wm.c
     c_src/registry.c
+    c_src/river-window-listener.c
+    c_src/river-output-listener.c
+    c_src/river-wm-listener.c
+    c_src/river-wm.c
 
   include-dirs: c_src
   extra-libraries: wayland-client
