workspaces_and_window_order

--- a/rivermonad.cabal
+++ b/rivermonad.cabal
@@ -51,6 +51,7 @@ executable rivermonad
   other-modules:
     Types
     Layout
+    Utils.BiMap
     Wayland.Client
     Wayland.Protocol.Core
     Wayland.Protocol.ImportedFunctions
