--- a/rivermonad.cabal
+++ b/rivermonad.cabal
@@ -50,12 +50,13 @@ executable rivermonad
   -- Modules included in this executable, other than Main.
   other-modules:
     Config
+    Handlers.LayerShell
     Handlers.Output
+    Handlers.PointerBindings
     Handlers.RiverWM
     Handlers.Seat
     Handlers.Window
     Handlers.XkbBindings
-    Handlers.LayerShell
     Layout
     Types
     Utils.BiMap
@@ -80,11 +81,11 @@ executable rivermonad
 
   c-sources:
     c_src/registry.c
+    c_src/river-layer-shell-listener.c
     c_src/river-output-listener.c
     c_src/river-seat-listener.c
     c_src/river-window-listener.c
     c_src/river-wm-listener.c
-    c_src/river-layer-shell-listener.c
     generated/river-layer-shell.c
     generated/river-wm.c
     generated/river-xkb-binding.c
